<resources>
    <string name="app_name">Timmi</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Tài khoản</string>
    <string name="title_login">Login</string>
    <string name="hint_email">Email</string>
    <string name="hint_pass">Mật khẩu</string>
    <string name="hint_name">Tên đầy đủ</string>
    <string name="hint_pass_confirm">Nhập lại mật khẩu</string>
    <string name="hint_no_account">Bạn chưa có tài khoản?</string>
    <string name="hint_register">Đăng ký mới</string>
    <string name="hint_login">Đăng nhập</string>
    <string name="hint_add_product">Thêm sản phẩm</string>
    <string name="hint_edit_product">Sửa sản phẩm</string>
    <string name="hint_cancel">Huỷ bỏ</string>
    <string name="hint_admin">Admin demo</string>

    <string name="title_admin_product">Quản lý sản phẩm</string>
    <string name="title_admin_order">Theo dõi đơn hàng</string>
    <string name="product_title">Quản lý sản phẩm</string>
    <string name="list_order">Danh sách đơn hàng</string>
</resources>