<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="cf20.soft.shoes.timmi.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_detail"
            app:destination="@id/navigation_detail" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_cart"
            app:destination="@id/navigation_cart" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_login"
            app:destination="@id/navigation_login" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="cf20.soft.shoes.timmi.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="cf20.soft.shoes.timmi.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_login"
        android:name="cf20.soft.shoes.timmi.ui.login.LoginFragment"
        android:label="@string/title_login"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_navigation_login_to_navigation_register"
            app:destination="@id/navigation_register" />
    </fragment>

    <fragment
        android:id="@+id/navigation_detail"
        android:name="cf20.soft.shoes.timmi.ui.detail.DetailFragment"
        android:label="Detail"
        tools:layout="@layout/fragment_detail" >
        <action
            android:id="@+id/action_navigation_detail_to_navigation_login"
            app:destination="@id/navigation_login" />
    </fragment>

    <fragment
        android:id="@+id/navigation_register"
        android:name="cf20.soft.shoes.timmi.ui.register.RegisterFragment"
        android:label="Register"
        tools:layout="@layout/fragment_register" />

    <fragment
        android:id="@+id/navigation_cart"
        android:name="cf20.soft.shoes.timmi.ui.cart.CartFragment"
        android:label="Cart"
        tools:layout="@layout/fragment_cart" />
</navigation>