<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <ImageView
        android:id="@+id/tvTitle"
        android:layout_width="140dp"
        android:layout_height="100dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline1" />

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_edt_01"
        android:fontFamily="@font/montserrat_regular"
        android:hint="@string/hint_email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:paddingHorizontal="10dp"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintWidth_percent="0.8" />

    <EditText
        android:id="@+id/edtName"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_edt_01"
        android:fontFamily="@font/montserrat_regular"
        android:hint="@string/hint_name"
        android:importantForAutofill="no"
        android:inputType="text"
        android:maxLines="1"
        android:paddingHorizontal="10dp"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtEmail"
        app:layout_constraintWidth_percent="0.8" />

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_edt_01"
        android:fontFamily="@font/montserrat_regular"
        android:hint="@string/hint_pass"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:maxLines="1"
        android:paddingHorizontal="10dp"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtName"
        app:layout_constraintWidth_percent="0.8" />

    <EditText
        android:id="@+id/edtPasswordConfirm"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_edt_01"
        android:fontFamily="@font/montserrat_regular"
        android:hint="@string/hint_pass_confirm"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:maxLines="1"
        android:paddingHorizontal="10dp"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtPassword"
        app:layout_constraintWidth_percent="0.8" />

    <TextView
        android:id="@+id/tvRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_button_01"
        android:fontFamily="@font/montserrat_regular"
        android:paddingHorizontal="30dp"
        android:paddingVertical="10dp"
        android:text="@string/hint_register"
        android:textColor="@color/purple_700"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtPasswordConfirm" />

    <TextView
        android:id="@+id/tvAdminTools"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/bg_button_01"
        android:fontFamily="@font/montserrat_regular"
        android:paddingHorizontal="30dp"
        android:paddingVertical="10dp"
        android:text="@string/hint_admin"
        android:textColor="@color/purple_700"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <FrameLayout
        android:id="@+id/layoutLoading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#66DCDCDC"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center" />
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>